# FEM_Magnetics_Toolbox

./: .buildinfo  .gitignore  .pylintrc  .pyspelling.yml  CHANGELOG.md  Contributing.md  Contributing.rst  README.md  README.rst  codecheck.sh  developer_notes.html  developers_notes.md  genindex.html  index.html  intro.html  introduction.html  ito_optuna_example.py  model_creation.md  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  tox.ini  user_guide_model_creation.html  user_guide_model_creation.md  user_guide_model_creation.rst  winding_description.txt  winding_overview.md  winding_types.html  winding_types.md
0.2.0/: .buildinfo  femmt.html  genindex.html  index.html  install.html  intro.html  objects.inv  others.html  search.html  searchindex.js  usage.html
0.2.1/: .buildinfo  femmt.html  genindex.html  index.html  install.html  intro.html  objects.inv  others.html  py-modindex.html  search.html  searchindex.js  usage.html
0.3.0/: .buildinfo  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html
_sources/: developer_notes.rst.txt  user_guide_model_creation.rst.txt
data/: BH_extractor.py  core_material_data_extractor.py  mu_extractor.py  mu_from_losses.py  mu_imag_extractor.py
docs/: README.txt  femmt.html  genindex.html  index.html  install.html  intro.html  objects.inv  others.html  requirements.txt  search.html  searchindex.js  usage.html  wordlist
femmt/: Analytical_Core_Data.py  BH.pro  Code_Adaptive_Meshing.txt  DAB.py  DAB_Input_Data.py  DAB_trafo.py  DAB_trafo_optimization.py  Data.py  Enumerations.py  FEMMT.py  FEMMT_geometric.py  FEMMT_test.py  Functions.py  LogParser.py  MagneticComponent.py  Mesh.py  Model.py  Reluctance.py  SimComparison.py  TwoDaxiSymmetric.py  __init__.py  basic_example.py  component.py  constants.py  data.py  drawing.py  dtos.py  enumerations.py  femmt.py  femmt_air_gaps.py  femmt_classes.py  femmt_enumerations.py  femmt_functions.py  femmt_log_parser.py  femmt_model_classes.py  femmt_reluctance.py  femmt_test.py  femmt_windings.py  functions.py  functions_drawing.py  (+16 more)
files/: data_matrix_fem.csv
gui/: FEMMT_gui.ui  FemmtGuiModel.ui  (+10 more)
(+503 files in other folders)
